Re-include disqus-count on homepage.

--- a/index.html
+++ b/index.html
@@ -71,3 +71,4 @@ title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
         </div>
     </div>
 </div>
+{% include disqus-count.html %}
