--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
                     <div class="slide" style="display: none">
                         {% if sponsor.site %}<a href="{{ sponsor.site }}">{% endif %}
                         {% if sponsor.logo %}
-                            <img class="sponsor-logo" alt="{{ sponsor.name }}" title="{{ sponsor.name }}" src="{{ sponsor.logo }}">
+                            <img class="sponsor-logo-image" alt="{{ sponsor.name }}" title="{{ sponsor.name }}" src="{{ sponsor.logo }}">
                         {% else %}
                             <div class="sponsor-text-front-page"><h4><strong>{{ sponsor.name }}</strong></h4></div>
                         {% endif %}
