Update Stuy Splash image

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -10,14 +10,14 @@ projects:
     - name: FIRSTthoughts
       url: /community/projects/firstthoughts/
       image-url: /img/projects/firstthoughts.jpg
-      description: FIRSTthoughts collects the expertise of individual team members and mentors, and shares it with the greater FIRST community, for years to come, in the spirit of gracious professionalism. This project aims to tackle the “wealth gap” in experience and resources between veteran and rookie teams, and make the FIRST experience as valuable as possible for all participants. 
+      description: FIRSTthoughts collects the expertise of individual team members and mentors, and shares it with the greater FIRST community, for years to come, in the spirit of gracious professionalism. This project aims to tackle the “wealth gap” in experience and resources between veteran and rookie teams, and make the FIRST experience as valuable as possible for all participants.
     - name: Maker Faire
       url: /community/projects/makerfaire/
       image-url: /img/projects/makerfaire.jpg
       description: Maker Faire is an annual event dedicated to celebrating "arts, crafts, engineering, science projects, and the Do-It-Yourself mindset" at which StuyPulse demonstrates the year's robot and its capabilities to instill a love of robotics in the young onlookers.
     - name: Stuy Splash
-      url: /community/projects/stuysplash/ 
-      image-url: /img/projects/stuysplash.jpg
+      url: /community/projects/stuysplash/
+      image-url: /img/projects/stuysplash.png
       description: Stuy Splash is an one-day intensive camp for FRC, covering everything from the foundation of the robot in engineering and programming perspective, to management and strategy skills that could apply to every team.
     - name: Team Manager
       url: /community/projects/teammanager/
