--- a/join/index.html
+++ b/join/index.html
@@ -3,5 +3,5 @@ layout: page
 title: Contact Form
 description: For newbies to access the contact form.
 ---
-<meta http-equiv="refresh" content="1; url=https://docs.google.com/forms/d/e/1FAIpQLSeGtvBCUIwPSyOSaFXgCon7fxAX81RfQb9h-jCIKBZkCUwgtg/viewform">
+<meta http-equiv="refresh" content="1; url=https://docs.google.com/forms/u/2/d/e/1FAIpQLSc-PMrN0ckTwh31leJh7ufiYa71aSAZHKSS0c_5kVV8uh5vlw/viewform?usp=sf_link">
 <p> If you aren't redirected in a few seconds, click <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGtvBCUIwPSyOSaFXgCon7fxAX81RfQb9h-jCIKBZkCUwgtg/viewform">here</a>.</p>
