--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
     <div class="carousel-inner">
         {% for item in site.data.carousel | limit: 5 %}
             <div class="{% if forloop.first %}active {% endif %}item">
-                <img src="{{ item.img }}" alt="{{ item.caption-header }}">
+                <img src="{{ item.img }}" width="960px;" height="480px;" alt="{{ item.caption-header }}">
                 <div class="carousel-caption">
                     <h4>{{ item.caption-header }}</h4>
                     <p>{{ item.caption-body }}</p>
