Add some additional views to calendar

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -13,8 +13,9 @@ description: You can check StuyPulse's calendar to see the meeting and event sch
             headerToolbar: {
                 left: 'prev,next today',
                 center: 'title',
-                right: 'dayGridMonth,listYear'
+                right: 'dayGridMonth,timeGridWeek,listWeek'
             },
+            nowIndicator: true,
             eventSources: [
                 {
                     googleCalendarId: 'info@stuypulse.com'
